Move photo expand to button and add padding to prevent carousel slide overflow

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -152,6 +152,7 @@ nav {
 
     img {
       width: 100%;
+      padding: 10px;
     }
   }
 
